[ML] NN workflow description. V2. Update in step-by-step algorithm description.

--- a/Machine Learning/Create your own NW/sigma_nw.ipynb
+++ b/Machine Learning/Create your own NW/sigma_nw.ipynb
@@ -15,68 +15,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Процесс.\n",
+    "# Обучение нейронной сети.\n",
     "\n",
-    "Допустим у нас трехслойная нейронная сеть, со слоями соответственно $input \\rightarrow hidden \\rightarrow output$.\n",
+    "## Описание основных формул и идей.\n",
     "\n",
-    "В процессе обучения выделяют следующие шаги.\n",
+    "Допустим у нас трехслойная нейронная сеть, с тремя слоями:\n",
+    "$$\n",
+    "    input \\rightarrow hidden \\rightarrow output\n",
+    "$$\n",
+    "\n",
+    "В процессе обучения выделяют следующие шаги:\n",
     "\n",
     "1. Прямой проход (суммирование всех взвешенных input-ов). Получаем промежуточный output.\n",
-    "$$\n",
-    "    o_{hid} = W_{inp, hid} \\times I_{inp}, \\\\\n",
-    "    o_{out} = W_{hid, out} \\times I_{hid}\n",
-    "$$\n",
+    "    - Выход hidden слоя: $O_{hid} = W_{inp, hid} \\times I_{inp}$\n",
+    "    - Выход output слоя (одновременно и выход сети): $O_{out} = W_{hid, out} \\times I_{hid}$\n",
     "\n",
     "2. Применяем функцию активации к каждому из промежуточных output-ов.\n",
+    "    - Выход hidden слоя: $O_{hid} = sigm(W_{inp, hid} \\times I_{inp})$\n",
+    "    - Выход output слоя: $O_{out} = sigm(W_{hid, out} \\times I_{hid})$\n",
+    "\n",
+    "**Промежуточный итог**: завершился прямой проход нейронной сети. Как результат на выходном слое у нас есть итоговые предсказания.\n",
+    "\n",
+    "3. Вычисление ошибки предсказания для output слоя (используем квадратичную ошибку).\n",
+    "    - Величинаа ошибки: $E_{out} = (expect_{out} - O_{out})^{2}$\n",
+    "\n",
+    "4. Обратное распростронение ошибки (вычисление ошибки для hidden слоя, и других если бы они были).\n",
+    "    - Величина ошибки: $E_{hid} = W_{hid, out}^{T} \\times E{out}$\n",
+    "\n",
+    "**Промежуточный итог**: тут показано как вычислять ошибку предсказания для output слоя и всех предыдущих при движении в обратном направлении, то есть от $output \\rightarrow input$.\n",
+    "\n",
+    "P.S. Oшибка каждого нейрона делится между нейронами которые сформировали выход данного нейрона, пропорционально весам связи. \n",
+    "Мы просто не нормируем на сумму всех весов по столбцу, так как это не особо важно.\n",
+    "\n",
+    "5. Обновление весовых коэффициентов (главное в нейронной сети).\n",
+    "    - Весовые коэффициенты hidden/output слоев: \n",
+    "    $W_{hid, out} = W_{hid, out} - \\alpha \\partial E_{out}/\\partial W_{hid, out}$\n",
+    "    - Весовые коэффициент input/hidden слоев: \n",
+    "    $W_{inp, hid} = W_{inp, hid} - \\alpha \\partial E_{hid}/\\partial W_{inp, hid}$\n",
+    "    \n",
+    "**Окончательный итог**: мы научились обновлять весовые коэффициенты нейронной сети используя градиентный спуск."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Краткое описание алгоритма обучения.\n",
+    "\n",
+    "Таким образом, мы выполняем следующую последовтельность действий:\n",
+    "1. Прямой проход от последовательно от input слоя до output слоя(см. выше пункты 1 и 2). В итоге у нас есть предсказание нейронной сети.\n",
+    "2. Вычисление ошибки предсказания для output слоя (см. пункт 3.)\n",
+    "3. Вычислить ошибку на предыдущем для output слоя (см. пункт 4.)\n",
+    "4. Модифицировать весовые коэффициенты между output слоем и предыдущим (см. пункт 5.)\n",
+    "5. Повторять пункты (3-4) до тех пор, пока не дойдем до input слоя (таким образом мы обновим все веса сети)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Обновление весовых коэффициентов для частного случая.\n",
+    "\n",
+    "Допустим при обучении используется квадратичная функция ошибки: $E = (expected - output)^{2}$.\n",
+    "\n",
+    "Рассмотрим как будет выглядеть выражение для обновление весов (пункт 5) в данном виде:\n",
     "$$\n",
-    "    o_{hid} = sigm(W_{inp, hid} \\times I_{inp}), \\\\\n",
-    "    o_{out} = sigm(W_{hid, out} \\times I_{hid})\n",
+    "    W_{hid, out} = W_{hid, out} - \\alpha \\partial E_{out}/\\partial W_{hid, out}.\n",
     "$$\n",
     "\n",
-    "3. Вычисление ошибки предсказания на output слое (используем квадратичную ошибку).\n",
-    "$$\n",
-    "    E_{out} = (expect_{out} - o_{out})^{2}\n",
-    "$$\n",
-    "\n",
-    "4. Обратное распростронение ошибки (вычисление ошибки для hidden слоя)\n",
-    "$$\n",
-    "    E_{hid} = W_{hid, out}^{T} \\times E{out}\n",
-    "$$\n",
-    "\n",
-    "P.S. Oшибка каждого узла делится пропорционально весам, входящим в данный. Мы просто не нормируем на сумму всех весов по столбцу, так как это не особо важно.\n",
-    "\n",
-    "5. Обновление весовых коэффициентов.\n",
-    "$$\n",
-    "    W_{hid, out} = W_{hid, out} - \\alpha \\frac{\\partial E_{out}}{\\partial W_{hid, out}}, \\\\\n",
-    "    W_{inp, hid} = W_{inp, hid} - \\alpha \\frac{\\partial E_{hid}}{\\partial W_{inp, hid}}\n",
-    "$$\n",
-    "\n",
-    "\n",
-    "Распишем последний пункт конкретно для нашей ситуации (квадратичная ошибка, функция активации - сигмиоида).\n",
-    "$$\n",
-    "    \\frac{\\partial \\; E_{out}}{\\partial w_{hid, out}} = \n",
-    "    \\frac{\\partial \\; E_{out}}{\\partial o_{out}} \\times \\frac{\\partial \\; o_{out}}{\\partial w_{hid, out}},\n",
-    "$$\n",
-    "\n",
-    "Но ввиду (см. ранее $E_{out}$):\n",
-    "$$\n",
-    "    \\frac{\\partial \\; E_{out}}{\\partial o_{out}} = -2 \\times (expect_{out} - o_{out}),\n",
-    "$$\n",
-    "\n",
-    "И кроме того ввиду (см. ранее $o_{out}$ и учитывая что $sigm(x)' = sigm(x) \\times (1 - sigm(x))$), \n",
-    "$$\n",
-    "    \\frac{\\partial \\; o_{out}}{\\partial w_{hid, out}} = \n",
-    "    sigm(W_{hid, out} \\times I_{hid}) \\times (1 - sigm(W_{hid, out} \\times I_{hid})) * o_{hid}\n",
-    "$$\n",
-    "\n",
-    "P.S. Последнее слагаемое получается по правилу дифференцирования сложной функции.\n",
-    "\n",
-    "Таким образом:\n",
-    "\n",
-    "$$\n",
-    "    \\frac{\\partial \\; E_{out}}{\\partial w_{hid, out}} = -2 \\times (expect_{out} - o_{out}) \\times \n",
-    "    sigm(W_{hid, out} \\times I_{hid}) \\times (1 - sigm(W_{hid, out} \\times I_{hid})) * o_{hid}\n",
-    "$$ \n"
+    "**ДОДЕЛАТЬ**.\n"
    ]
   },
   {
