--- a/Machine Learning/Yandex_specialization/main_ml_steps.ipynb
+++ b/Machine Learning/Yandex_specialization/main_ml_steps.ipynb
@@ -315,11 +315,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "5. Perform normalization of features\n"
+   ]
   },
   {
    "cell_type": "code",
