[ML] Quality metrics are complete.

--- a/Machine Learning/Yandex_specialization/general_notes.ipynb
+++ b/Machine Learning/Yandex_specialization/general_notes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,18 +202,464 @@
    "source": [
     "# Quality metrics\n",
     "\n",
-    "1. Loss function\n",
+    "\n",
+    "[Quality metrics in sklearn](https://scikit-learn.org/stable/modules/model_evaluation.html)\n",
+    "- Classification metrics\n",
+    "- Multilabel ranking metrics\n",
+    "- Regression metrics\n",
+    "- Clustering metrics\n",
+    "\n",
+    "## 2. Regression quality\n",
+    "\n",
+    "Below we prepare data for binary classification task and then calculate quality of chosen classifier, using different metrics from `sklearn.metrics` module."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Step 1. Load regression data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CRIM</th>\n",
+       "      <th>ZN</th>\n",
+       "      <th>INDUS</th>\n",
+       "      <th>CHAS</th>\n",
+       "      <th>NOX</th>\n",
+       "      <th>RM</th>\n",
+       "      <th>AGE</th>\n",
+       "      <th>DIS</th>\n",
+       "      <th>RAD</th>\n",
+       "      <th>TAX</th>\n",
+       "      <th>PTRATIO</th>\n",
+       "      <th>B</th>\n",
+       "      <th>LSTAT</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00632</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>2.31</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.538</td>\n",
+       "      <td>6.575</td>\n",
+       "      <td>65.2</td>\n",
+       "      <td>4.0900</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>296.0</td>\n",
+       "      <td>15.3</td>\n",
+       "      <td>396.90</td>\n",
+       "      <td>4.98</td>\n",
+       "      <td>24.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>0.02731</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.07</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.469</td>\n",
+       "      <td>6.421</td>\n",
+       "      <td>78.9</td>\n",
+       "      <td>4.9671</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>242.0</td>\n",
+       "      <td>17.8</td>\n",
+       "      <td>396.90</td>\n",
+       "      <td>9.14</td>\n",
+       "      <td>21.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>0.02729</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.07</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.469</td>\n",
+       "      <td>7.185</td>\n",
+       "      <td>61.1</td>\n",
+       "      <td>4.9671</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>242.0</td>\n",
+       "      <td>17.8</td>\n",
+       "      <td>392.83</td>\n",
+       "      <td>4.03</td>\n",
+       "      <td>34.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>0.03237</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.18</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.458</td>\n",
+       "      <td>6.998</td>\n",
+       "      <td>45.8</td>\n",
+       "      <td>6.0622</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>222.0</td>\n",
+       "      <td>18.7</td>\n",
+       "      <td>394.63</td>\n",
+       "      <td>2.94</td>\n",
+       "      <td>33.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>0.06905</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.18</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.458</td>\n",
+       "      <td>7.147</td>\n",
+       "      <td>54.2</td>\n",
+       "      <td>6.0622</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>222.0</td>\n",
+       "      <td>18.7</td>\n",
+       "      <td>396.90</td>\n",
+       "      <td>5.33</td>\n",
+       "      <td>36.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      CRIM    ZN  INDUS  CHAS    NOX     RM   AGE     DIS  RAD    TAX  \\\n",
+       "0  0.00632  18.0   2.31   0.0  0.538  6.575  65.2  4.0900  1.0  296.0   \n",
+       "1  0.02731   0.0   7.07   0.0  0.469  6.421  78.9  4.9671  2.0  242.0   \n",
+       "2  0.02729   0.0   7.07   0.0  0.469  7.185  61.1  4.9671  2.0  242.0   \n",
+       "3  0.03237   0.0   2.18   0.0  0.458  6.998  45.8  6.0622  3.0  222.0   \n",
+       "4  0.06905   0.0   2.18   0.0  0.458  7.147  54.2  6.0622  3.0  222.0   \n",
+       "\n",
+       "   PTRATIO       B  LSTAT  target  \n",
+       "0     15.3  396.90   4.98    24.0  \n",
+       "1     17.8  396.90   9.14    21.6  \n",
+       "2     17.8  392.83   4.03    34.7  \n",
+       "3     18.7  394.63   2.94    33.4  \n",
+       "4     18.7  396.90   5.33    36.2  "
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.datasets import load_boston\n",
+    "\n",
+    "data = load_boston()\n",
+    "cols = data.feature_names\n",
+    "df = pd.DataFrame(\n",
+    "    data = np.concatenate((data.data, data.target.reshape(data.target.shape[0], 1)), axis=1),\n",
+    "    columns = np.concatenate( (data.feature_names, ['target']), axis=None)\n",
+    ")\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Step 2. Check that there is correlation with target, so we can use the Linear approach."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CRIM    -0.388305\n",
+       "ZN       0.360445\n",
+       "INDUS   -0.483725\n",
+       "CHAS     0.175260\n",
+       "NOX     -0.427321\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[:, cols].corrwith(df.target)[:5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Step 3. Check that we are working with not scaled data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CRIM      3.613524\n",
+       "ZN       11.363636\n",
+       "INDUS    11.136779\n",
+       "CHAS      0.069170\n",
+       "NOX       0.554695\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[:, cols].mean()[:5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Step 3. Scale, shuffle data and split to train and test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import scale\n",
+    "from sklearn.utils import shuffle\n",
+    "\n",
+    "df = shuffle(df, random_state=1)\n",
+    "X = scale(df[cols])\n",
+    "y = df.target.values\n",
+    "\n",
+    "X_test, X_train, y_test, y_train = train_test_split(X, y, test_size=0.3, random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Step 4. Train classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LassoCV(alphas=[1e-05, 0.0001, 0.001, 0.01, 0.1, 1.0, 10.0, 100.0, 1000.0,\n",
+       "                10000.0],\n",
+       "        copy_X=True, cv=5, eps=0.001, fit_intercept=True, max_iter=1000,\n",
+       "        n_alphas=100, n_jobs=None, normalize=False, positive=False,\n",
+       "        precompute='auto', random_state=None, selection='cyclic', tol=0.0001,\n",
+       "        verbose=False)"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LassoCV\n",
+    "\n",
+    "alphas = [10.**(i) for i in range(-5, 5)]\n",
+    "\n",
+    "clf = LassoCV(alphas=alphas, cv=5)\n",
+    "clf.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Step 5. Obtain results of classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[17.07212312 12.82010961 18.0140939  22.61909623 17.43701251 28.48457309\n",
+      " 33.13333082 12.5737757  27.24587975 29.4979417 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = clf.predict(X_train)\n",
+    "print(y_pred[:10])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now lets claculate quality metrics for our prediction.\n",
     "\n",
     "\n",
+    "### 2.1 MSE\n",
     "\n",
-    "Regression quality:\n",
-    "1. MSE = ! Not good for data with outlines\n",
-    "2. MAE = ! Good for data with outlines\n",
-    "3. Determination R = 1 - (какая доля дисперсии (разнообразия) объяснено нашей моелью)\n",
-    "    - R = 0 - constant model\n",
-    "    - R = 1 - ideal model\n",
-    "    - R < 0 - model is worser than constant\n",
-    "4. Quantile error - qualtiy with different weights for correct/incorrect prediction (**usimmetric quality function**) "
+    "**MSE** - mean squared error \n",
+    "$$\n",
+    "    MSE = \\frac{1}{N} \\sum_{i}(y_{i}^{pred}-y_{i}^{actual})^{2}\n",
+    "$$\n",
+    "\n",
+    "**Quality criteria**: the lower MSE value, the better classifier.\n",
+    "\n",
+    "Notes:\n",
+    "1. Links: \n",
+    "[docs](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.mean_squared_error.html)\n",
+    "2. This metric is BAD for data with outliers.\n",
+    "3. Could not be easily interpreted, because there is no top boundary, so it is relative for data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE = 19.92\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "MSE = mean_squared_error(y_train, y_pred)\n",
+    "print('MSE = {0:.2f}'.format(MSE))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2 MAE\n",
+    "\n",
+    "**MAE** - mean absolute error\n",
+    "$$\n",
+    "    MAE = \\frac{1}{N} \\sum_{i}\\Big|y_{i}^{pred}-y_{i}^{actual}\\Big|\n",
+    "$$\n",
+    "\n",
+    "**Quality criteria**: the lower MSE value, the better classifier.\n",
+    "\n",
+    "Notes:\n",
+    "1. Links: \n",
+    "[docs](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.mean_absolute_error.html)\n",
+    "2. Good for data with outliers\n",
+    "3. Could not be easily interpreted, because there is no top boundary, so it is relative for data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE = 3.07\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_absolute_error\n",
+    "\n",
+    "MAE = mean_absolute_error(y_train, y_pred)\n",
+    "print('MAE = {0:.2f}'.format(MAE))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3 Determination R2\n",
+    "\n",
+    "**Determination** - shows what fraction of variance (differneces in target) could be explained by classifier.\n",
+    "In this manner it predicts how many of unseen data could be predicted with this classifier.\n",
+    "$$\n",
+    "    R^{2}=1-\\frac{\\sum_{i}(y_{i}^{pred}-y_{i}^{actual})^{2}}\n",
+    "    {\\sum_{i}(y_{i}^{pred}-AVG(y_{i}^{actual}))^{2}}\n",
+    "$$\n",
+    "\n",
+    "$R^{2}$ score could be interpreted as follows:\n",
+    "- $R^{2}$ = 0 - constant model\n",
+    "- $R^{2}$ = 1 - ideal model\n",
+    "- $R^{2}$ < 0 - model is worser than constant\n",
+    "\n",
+    "Notes:\n",
+    "1. Links:\n",
+    "[docs](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.r2_score.html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R2 = 0.79\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import r2_score\n",
+    "\n",
+    "r2 = r2_score(y_train, y_pred)\n",
+    "print('R2 = {0:.2f}'.format(r2))"
    ]
   },
   {
@@ -559,7 +1005,7 @@
     "2. **FIRST LETTER** - shows does the result of prediction is real:\n",
     "    * If **T** - predictor classifcation (second letter) is True. \n",
     "    Predicted `cat` is `cat`, predicted `non-cat` is `non-cat`.\n",
-    "    * If **T** - predictor classifcation (second letter) is True.\n",
+    "    * If **F** - predictor classifcation (second letter) is False.\n",
     "    Predicted `cat` is actualy `non-cat`, predicted `non-cat` is actualy `cat`.\n",
     "\n",
     "\n",
@@ -753,7 +1199,7 @@
     "1. Often we have constraints on one metrics among two, so with fixed one we will try to maximize other.\n",
     "\n",
     "*Example: \n",
-    "in medical classification it is better to predict that patient is ill if in reality it is not (False-Positive), \n",
+    "in medical classification it is better to predict that patient is ill if actualy he is not (False-Positive), \n",
     "than to skip real ill patient (False-Negative). So in this case, we fix Presision and try to maximize Recall.*\n",
     "\n",
     "### 3.6 f1-score\n",
@@ -911,7 +1357,8 @@
     "1. Ox - Recall\n",
     "2. Oy - Precision\n",
     "\n",
-    "Quality criteria: the bigger area under the curve - better classification results.\n",
+    "**Quality criteria**: the closer points of plot to point A(1,1) - which means Recall=1, Precision=1, the better classification quality.\n",
+    "This quality criteria evolve to the next: bigger area under the curve - higher classification quality.\n",
     "\n",
     "\n",
     "**Notes**:\n",
