--- a/Machine Learning/Yandex_specialization/main_ml_steps.ipynb
+++ b/Machine Learning/Yandex_specialization/main_ml_steps.ipynb
@@ -285,7 +285,9 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -320,6 +322,27 @@
    "source": [
     "5. Perform normalization of features\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Next steps (template)\n",
+    "\n",
+    "\n",
+    "1. Check that data does nots scaled(mean = 0, std = 1) using `df.mean(), df.std()`\n",
+    "2. Perform scaling using `sklearn.preprocessing.scale`\n",
+    "3. Shuffle the features AND the target (so, on this step it is better if target and features will be in one dataframe), using `sklearn.utils.shuffle`\n",
+    "4. Split data on train, test datasets:\n",
+    "`X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=1)`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
