[ML] Task #9 is complete. NN

--- a/Machine Learning/Yandex_specialization/1_Labeling_data_training/t8_task_nn.ipynb
+++ b/Machine Learning/Yandex_specialization/1_Labeling_data_training/t8_task_nn.ipynb
@@ -41,12 +41,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Выполним инициализацию основных используемых модулей\n",
-    "%matplotlib inline\n",
     "\n",
     "import os\n",
     "import random\n",
@@ -65,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +205,7 @@
        "4      9.4        5  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,30 +217,7 @@
     "    print('Path does not exists: {0}'.format(path))\n",
     "else:\n",
     "    df = pd.read_csv(path, delimiter=';')\n",
-    "df.head()\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "В качестве альтернативного варианта, можно выполнить загрузку данных напрямую из репозитория UCI, воспользовавшись библиотекой urllib."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import urllib\n",
-    "# URL for the Wine Quality Data Set (UCI Machine Learning Repository)\n",
-    "# url = \"https://archive.ics.uci.edu/ml/machine-learning-databases/wine-quality/winequality-red.csv\"\n",
-    "# загрузка файла\n",
-    "# f = urllib.urlopen(url)\n",
-    "# f.readline()  # пропуск заголовочной строки\n",
-    "# data = np.loadtxt(f, delimiter=';')"
+    "df.head()"
    ]
   },
   {
@@ -253,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,10 +248,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.21848288, 0.01358457, 0.00711271, 0.06320607, 0.00222649,\n",
+       "       0.31207977, 0.83358734, 0.02582182, 0.08577216, 0.01691227,\n",
+       "       0.27292187])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.mean(axis=0)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -333,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,10 +344,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Определение основных констант\n",
@@ -375,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -424,7 +413,8 @@
     "# ds.outdim -- количество нейронов выходного слоя, равное количеству меток классов\n",
     "# SoftmaxLayer -- функция активации, пригодная для решения задачи многоклассовой классификации\n",
     "\n",
-    "init_params = np.random.random((len(net.params))) # Инициализируем веса сети для получения воспроизводимого результата\n",
+    "# Инициализируем веса сети для получения воспроизводимого результата\n",
+    "init_params = np.random.random((len(net.params)))\n",
     "net._setParameters(init_params)"
    ]
   },
@@ -437,17 +427,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
     "random.seed(0)\n",
     "# Модуль настройки параметров pybrain использует модуль random; зафиксируем seed для получения воспроизводимого результата\n",
     "trainer = BackpropTrainer(net, dataset=ds_train) # Инициализируем модуль оптимизации\n",
-    "err_train, err_val = trainer.trainUntilConvergence(maxEpochs=MAX_EPOCHS)\n",
+    "err_train, err_val = trainer.trainUntilConvergence(maxEpochs=MAX_EPOCHS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(10, 5))\n",
     "line_train = plt.plot(err_train, 'b', err_val, 'r') # Построение графика\n",
     "xlab = plt.xlabel('Iterations')\n",
-    "ylab = plt.ylabel('Error')"
+    "ylab = plt.ylabel('Error')\n",
+    "ax.grid(True)\n",
+    "plt.show()"
    ]
   },
   {
@@ -459,11 +461,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error on train:  49.0616621984 %\n",
+      "Error on test:  46.0416666667 %\n"
+     ]
+    }
+   ],
    "source": [
     "res_train = net.activateOnDataset(ds_train).argmax(axis=1) # Подсчет результата на обучающей выборке\n",
     "print 'Error on train: ', percentError(res_train, ds_train['target'].argmax(axis=1)), '%' # Подсчет ошибки\n",
@@ -488,38 +499,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Complete: ', 0)\n",
+      "('Complete: ', 1)\n",
+      "('Complete: ', 2)\n",
+      "('Complete: ', 3)\n",
+      "('Complete: ', 4)\n",
+      "('Complete: ', 5)\n",
+      "Done\n",
+      "Wall time: 6min 28s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "random.seed(0)\n",
+    "np.random.seed(0)\n",
+    "\n",
+    "hidden_neurons_num = np.array([50, 100, 200, 500, 700, 1000])\n",
+    "res_train_vec = np.zeros(hidden_neurons_num.shape[0], dtype=float)\n",
+    "res_test_vec = np.zeros(hidden_neurons_num.shape[0], dtype=float)\n",
+    "\n",
+    "\n",
+    "for ID, nnum in enumerate(hidden_neurons_num):\n",
+    "    cur_net = buildNetwork(\n",
+    "        ds_train.indim, nnum, \n",
+    "        ds_train.outdim, outclass=SoftmaxLayer\n",
+    "    )\n",
+    "    init_params = np.random.random((len(cur_net.params)))\n",
+    "    cur_net._setParameters(init_params)\n",
+    "    \n",
+    "    trainer = BackpropTrainer(cur_net, dataset=ds_train)\n",
+    "    err_train, err_val = trainer.trainUntilConvergence(maxEpochs=MAX_EPOCHS)\n",
+    "    \n",
+    "    res_train_vec[ID] = np.min(err_train)\n",
+    "    res_test_vec[ID] = np.min(err_val)\n",
+    "    \n",
+    "    print('Complete: ', ID)\n",
+    "    \n",
+    "print('Done')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.10014896 0.09681867 0.09470403 0.09476989 0.10616738 0.12148877]\n",
+      "1000\n",
+      "200\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(res_test_vec)\n",
+    "print(hidden_neurons_num[res_train_vec.argmax()])\n",
+    "n_opt = hidden_neurons_num[res_test_vec.argmin()]\n",
+    "print(n_opt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "random.seed(0) # Зафиксируем seed для получния воспроизводимого результата\n",
-    "np.random.seed(0)\n",
-    "\n",
-    "def plot_classification_error(hidden_neurons_num, res_train_vec, res_test_vec):\n",
-    "# hidden_neurons_num -- массив размера h, содержащий количество нейронов, по которому предполагается провести перебор,\n",
-    "#   hidden_neurons_num = [50, 100, 200, 500, 700, 1000];\n",
-    "# res_train_vec -- массив размера h, содержащий значения доли неправильных ответов классификации на обучении;\n",
-    "# res_train_vec -- массив размера h, содержащий значения доли неправильных ответов классификации на контроле\n",
-    "    plt.figure()\n",
-    "    plt.plot(hidden_neurons_num, res_train_vec)\n",
-    "    plt.plot(hidden_neurons_num, res_test_vec, '-r')\n",
-    "\n",
-    "def write_answer_nn(optimal_neurons_num):\n",
-    "    with open(\"nnets_answer1.txt\", \"w\") as fout:\n",
-    "        fout.write(str(optimal_neurons_num))\n",
-    "\n",
-    "hidden_neurons_num = [50, 100, 200, 500, 700, 1000]\n",
-    "res_train_vec = list()\n",
-    "res_test_vec = list()\n",
-    "\n",
-    "for nnum in hidden_neurons_num:\n",
-    "    # Put your code here\n",
-    "    # Не забудьте про инициализацию весов командой np.random.random((len(net.params)))\n",
-    "    \n",
-    "# Постройте график зависимости ошибок на обучении и контроле в зависимости от количества нейронов\n",
-    "plot_classification_error(hidden_neurons_num, res_train_vec, res_test_vec)          \n",
-    "#  Запишите в файл количество нейронов, при котором достигается минимум ошибки на контроле\n",
-    "write_answer_nn(hidden_neurons_num[res_test_vec.index(min(res_test_vec))]) "
+    "with open('2.txt', 'w') as f:\n",
+    "    f.write(str(n_opt))"
    ]
   }
  ],
@@ -528,6 +584,18 @@
    "display_name": "Python 2",
    "language": "python",
    "name": "python2"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15"
   },
   "toc": {
    "base_numbering": 1,
