[ML] Add my own RF tree implementation.

--- a/Machine Learning/Yandex_specialization/trees.ipynb
+++ b/Machine Learning/Yandex_specialization/trees.ipynb
@@ -646,7 +646,8 @@
    "source": [
     "## Decision tree construction\n",
     "\n",
-    "[Decision tree](https://scikit-learn.org/stable/modules/tree.html)\n",
+    "[scilit learn](https://scikit-learn.org/stable/modules/tree.html) ; \n",
+    "[medium](https://towardsdatascience.com/understanding-decision-trees-for-classification-python-9663d683c952)\n",
     "\n",
     "\n",
     "Key idea - computation of Decision Tree is **greedy** algorithm.\n",
@@ -715,6 +716,8 @@
     "In this section we will talk more about impurity criteria for classification to understand how construction of Decision Tree is going on.\n",
     "\n",
     "### Gini criteria\n",
+    "\n",
+    "[gini](https://victorzhou.com/blog/gini-impurity/)\n",
     "\n",
     "Gini criteria answer the simple question: **what's the probability that we classified this object incorrectly?**\n",
     "\n",
